--- a/index.html
+++ b/index.html
@@ -4,48 +4,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rainbow Shield | NATO Multi-Spectrum Maneuvers Lviv</title>
+    <title>Rainbow Shield | NATO All-Spectrum Penetration Tactics</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&family=JetBrains+Mono:wght@700&display=swap" rel="stylesheet">
     <style>
-        body {
-            font-family: 'Inter', sans-serif;
-            scroll-behavior: smooth;
-        }
-        .mono {
-            font-family: 'JetBrains Mono', monospace;
-        }
-        .rainbow-border {
-            border-image: linear-gradient(to right, red, orange, yellow, green, blue, indigo, violet) 1;
-        }
+        body { font-family: 'Inter', sans-serif; scroll-behavior: smooth; }
         .rainbow-text {
-            background: linear-gradient(to right, #ff0000, #ff7f00, #ffff00, #00ff00, #0000ff, #4b0082, #8b00ff);
+            background: linear-gradient(to right, #ef4444, #f59e0b, #10b981, #3b82f6, #8b5cf6, #ec4899);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
+            background-size: 200% auto;
+            animation: flow 3s linear infinite;
         }
-        @keyframes rainbow-flow {
-            0% { background-position: 0% 50%; }
-            50% { background-position: 100% 50%; }
-            100% { background-position: 0% 50%; }
-        }
-        .animate-rainbow {
-            background-size: 200% 200%;
-            animation: rainbow-flow 5s linear infinite;
+        @keyframes flow { to { background-position: 200% center; } }
+        .glow-rainbow:hover {
+            box-shadow: 0 0 20px rgba(236, 72, 153, 0.4);
+            border-color: #ec4899;
         }
     </style>
-<script type="importmap">
+    <script type="importmap">
 {
   "imports": {
-    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
-    "react": "https://esm.sh/react@^19.2.4",
+    "react": "https://esm.sh/react@19.0.0",
+    "react-dom": "https://esm.sh/react-dom@19.0.0",
+    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
+    "@google/genai": "https://esm.sh/@google/genai@1.42.0",
+    "lucide-react": "https://esm.sh/lucide-react@0.475.0",
     "react/": "https://esm.sh/react@^19.2.4/",
-    "@google/genai": "https://esm.sh/@google/genai@^1.42.0",
-    "lucide-react": "https://esm.sh/lucide-react@^0.575.0"
+    "react-dom/": "https://esm.sh/react-dom@^19.2.4/"
   }
 }
 </script>
 </head>
 <body class="bg-zinc-950 text-zinc-100 selection:bg-pink-500 selection:text-white">
     <div id="root"></div>
+    <!-- Entry point script for the application -->
+    <script type="module" src="index.tsx"></script>
 </body>
 </html>
