--- a/index.html
+++ b/index.html
@@ -5,17 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rainbow Shield | NATO All-Spectrum Penetration Tactics</title>
-    <!-- Tailwind CSS for styling -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&family=JetBrains+Mono:wght@700&display=swap" rel="stylesheet">
     <script>
-        // Shim to prevent "process is not defined" error in some environments
-        if (typeof window.process === 'undefined') {
-            window.process = { env: { API_KEY: '' } };
-        }
+        // Глобальний запобіжник для process.env
+        window.process = window.process || { env: { API_KEY: '' } };
     </script>
     <style>
-        body { font-family: 'Inter', sans-serif; scroll-behavior: smooth; }
+        body { font-family: 'Inter', sans-serif; background-color: #09090b; color: #f4f4f5; }
         .rainbow-text {
             background: linear-gradient(to right, #ef4444, #f59e0b, #10b981, #3b82f6, #8b5cf6, #ec4899);
             -webkit-background-clip: text;
@@ -24,10 +21,6 @@
             animation: flow 3s linear infinite;
         }
         @keyframes flow { to { background-position: 200% center; } }
-        .glow-rainbow:hover {
-            box-shadow: 0 0 30px rgba(236, 72, 153, 0.4);
-            border-color: #ec4899;
-        }
     </style>
     <script type="importmap">
 {
@@ -43,9 +36,13 @@
 }
 </script>
 </head>
-<body class="bg-zinc-950 text-zinc-100 selection:bg-pink-500 selection:text-white">
-    <div id="root"></div>
-    <!-- The platform automatically handles index.tsx as an entry point if it exists -->
+<body class="bg-zinc-950 selection:bg-pink-500 selection:text-white">
+    <div id="root">
+        <!-- Тимчасовий індикатор завантаження, поки React монтується -->
+        <div style="height: 100vh; display: flex; align-items: center; justify-content: center; background: #000; color: #fff; font-family: sans-serif; font-weight: bold; text-transform: uppercase; letter-spacing: 0.2em;">
+            Завантаження Протоколу...
+        </div>
+    </div>
     <script type="module" src="./index.tsx"></script>
 </body>
 </html>
